# TORM

./: CMakeLists.txt  README.md  package.xml
include/torm/: torm_cost.h  torm_debug.h  torm_ik_solver.h  torm_optimizer.h  torm_parameters.h  torm_problem.h  torm_trajectory.h  torm_utils.h
launch/: fetch.launch
src/: torm_cost.cpp  torm_debug.cpp  torm_ik_solver.cpp  torm_main.cpp  torm_optimizer.cpp  torm_parameters.cpp  torm_problem.cpp  torm_trajectory.cpp
src/data/problem/: fetch_circle.yaml  fetch_hello.yaml  fetch_rotation.yaml  fetch_s.yaml  fetch_s_two.yaml  fetch_square.yaml
src/data/scene/: circle  hello  rot_yz  s  s_two  square
