<package format="2">
  <name>torm</name>
  <description>torm</description>

  <version>0.0.1</version>
  <author email="mincheul.kang@kaist.ac.kr">Mincheul Kang</author>
  <maintainer email="mincheul.kang@kaist.ac.kr">Mincheul Kang</maintainer>

  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>moveit_core</build_depend>
</package>
